adding users & childern

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -1,13 +1,85 @@
 {
-    "defaultLocale":"ltl",
-    "hello": "hello" ,
+    "defaultLocale": "ltl",
+    "hello": "hello",
     "email": "Email",
-    "enter-email":"Enter email",
-    "enter-Password":"Enter Password",
-    "remember-me":"Remember me",
-    "login":"Login"
-
-    ,"password":"Password"
-
-
+    "enter-email": "Enter email",
+    "enter-Password": "Enter Password",
+    "remember-me": "Remember me",
+    "login": "Login",
+    "password": "Password",
+    "homepage": "Home Page",
+    "admin_nav": "Admin Bar",
+    "GithubAnyErrorOrSendHere": "Github repo",
+    "Documentation": "Ask here for bugs",
+    "status": "Status",
+    "Home": "Home",
+    "Version": "Version",
+    "sponsors": "Sponsors",
+    "children": "Children",
+    "users": "Users",
+    "see_more": "See more",
+    "AddChild": "Add Child",
+    "child":"Child",
+    "firstname": "First name",
+    "lastname": "Last name",
+    "mothername": "Mother name",
+    "father": "Father name",
+    "mobilephone": "Mobile number",
+    "phone": "Phone number",
+    "birthday": "Birthday",
+    "birthplace": "Birthplace",
+    "needsurgery": "Need Surgery",
+    "SrugeryType": "Srugery Type",
+    "IsSponsored": "Is Sponsored",
+    "sponsor": "Sponsor Name",
+    "search": "search",
+    "ChildrenTable": "Children Table",
+    "DateRangeofsponsor": "Date Range of Sponsored",
+    "EnterSrugeryType": "Enter Srugery Type",
+    "add": "Add",
+    "Enterbirthplace": "Enter birthplace",
+    "Enterphone": "Enter phone",
+    "Entermobilephone": "Enter mobilephone",
+    "Enterfather": "Enter father",
+    "entermothername": "Enter mother name",
+    "enterlastname": "Enter last name",
+    "enterfirstname": "Enter first name",
+    "event": "event",
+    "name": "Name",
+    "ContactInfo": "Contact Info",
+    "BirthInfo": "Birth Info",
+    "SponsoredInfo": "Sponsored Info",
+    "SurgeryInfo": "Surgery Info",
+    "Errorinput": "Error input",
+    "pleaseenter": "Please Enter",
+    "ok": "Ok",
+    "NoNeedSurgery": "No Need Surgery",
+    "IsNotSponsored": "Is Not Sponsored",
+    "remove": "Remove",
+    "edit": "Edit",
+    "ErrorOnDataIsAfterNowBirthday": "please enter BirthdayAfterNow",
+    "TagsNotFound": "Tag Not Found",
+    "Su": "Su",
+    "Mo": "Mo",
+    "Tu": "Tu",
+    "We": "We",
+    "Th": "Th",
+    "Fr": "Fr",
+    "Sa": "Sa",
+    "January": "January",
+    "February": "February",
+    "March": "March",
+    "April": "April",
+    "May": "May",
+    "June": "June",
+    "July": "July",
+    "August": "August",
+    "September": "September",
+    "October": "October",
+    "November": "November",
+    "December": "December",
+    "firstDay": 1,
+    "cancel": "Cancel",
+    "from": "From",
+    "to": "To"
 }
