adding words to (ar,en)

--- a/resources/js/lang/ar.json
+++ b/resources/js/lang/ar.json
@@ -1,100 +1,88 @@
 {
-    "defaultLocale":"rtl",
-
-    "hello": "مرحبا" ,
+    "defaultLocale": "rtl",
+    "hello": "مرحبا",
     "email": "بريد",
-    "enter-email":"ادخل البريد الالكتروني",
-    "enter-Password":"ادخل كلمة المرور",
-    "remember-me":"تذكرني",
-    "login":"تسجيل دخول"
-
-    ,"password":"كلمة مرور",
-
-
-    
-    "homepage":"صفحة الرئيسية",
-
-    "admin_nav":"خصائص الادمن",
-    "GithubAnyErrorOrSendHere":"Github",
-    "Documentation":"للاخطاء او الاطلاع على مشروع",
-    "status": "الاحصائيات" ,
-    "Home": "الرئيسي" ,
-    "Version": "النسخة" ,
-    "sponsors": "الداعمين" ,
-    "children": "الاطفال" ,
-    "users": "المستخدمين" ,
-    "see_more": "انقر للمزيد" ,
-    "AddChild": "اضافة طفل" ,
-    "child":"طفل",
-
-    "firstname": "الاسم الاول" ,
-    "lastname": "الكنية" ,
-    "mothername": "اسم الام" ,
-    "father": "اسم الاب" ,
-    "mobilephone": "رقم الجوال" ,
-    "phone": "رقم الهاتف" ,
-    "birthday": "تاريخ الميلاد" ,
-    "birthplace": "مكان التولد" ,
-    "needsurgery": "بحاجة عملية" ,
-    "SrugeryType": "نوع العملية" ,
-    "IsSponsored": "هل هناك داعم" ,
-    "sponsor": "اسم الداعم" ,
-    "search": "بحث", 
-    "ChildrenTable":"جدول الاطفال",
-
-
-    "DateRangeofsponsor":"الدعم من تاريخ الى تاريخ",
-    "EnterSrugeryType":"ادخل نوع العملية",
-
-    "add":"اضافة",
-    "Enterbirthplace":"ادخل تاريخ الميلاد",
-    "Enterphone":"ادخل رقم الهاتف",
-    "Entermobilephone":"ادخل رقم الموبايل",
-    "Enterfather":"ادخل اسم الاب",
-    "entermothername":"ادخل اسم الام",
-    "enterlastname":"ادخل الكنية",
-    "enterfirstname":"ادخل الاسم",
-    "event":"حدث",
-    "name":"الاسم",
-    "ContactInfo":"معلومات الاتصال",
-    "BirthInfo":"معلومات الميلاد",
-    "SponsoredInfo":"معلومات الداعم",
-    "SurgeryInfo":"معلومات الجراحة",
-    
-    "Errorinput":"خطأ في المدخلات",
-    "pleaseenter":"ادخل حقل ",
-    "ok":"حسناً",
-    "NoNeedSurgery":"ليس بحاجة",
-    "IsNotSponsored":"لا يوجد داعم",
-    "remove":"حذف",
-    "edit":"تعديل",
-
-    "ErrorOnDataIsAfterNowBirthday":"ارجو ادخال تاريخ الميلاد قبل تاريخ اليوم",
-    "TagsNotFound":"خطأ في نظام الوصف غير موجود",
-    
-    "Su":"احد",
-    "Mo":"اثن",
-    "Tu":"ثلاث",
-    "We":"ارب",
-    "Th":"خمي",
-    "Fr":"جمع",
-    "Sa":"سب",
-    "January":"كانون الثاني",
-    "February":"شباط",
-    "March":"آذار",
+    "enter-email": "ادخل البريد الالكتروني",
+    "enter-Password": "ادخل كلمة المرور",
+    "remember-me": "تذكرني",
+    "login": "تسجيل دخول",
+    "password": "كلمة مرور",
+    "error_password_or_username": "كلمة مرور او اسم المستخدم خطأ",
+    "error": "خطأ",
+    "TRY_AGEIN": "حاول مره ثانية",
+    "homepage": "صفحة الرئيسية",
+    "admin_nav": "خصائص الادمن",
+    "GithubAnyErrorOrSendHere": "Github",
+    "Documentation": "للاخطاء او الاطلاع على مشروع",
+    "status": "الاحصائيات",
+    "Home": "الرئيسي",
+    "Version": "النسخة",
+    "sponsors": "الداعمين",
+    "children": "الاطفال",
+    "users": "المستخدمين",
+    "see_more": "انقر للمزيد",
+    "AddChild": "اضافة طفل",
+    "child": "طفل",
+    "firstname": "الاسم الاول",
+    "lastname": "الكنية",
+    "mothername": "اسم الام",
+    "father": "اسم الاب",
+    "mobilephone": "رقم الجوال",
+    "phone": "رقم الهاتف",
+    "birthday": "تاريخ الميلاد",
+    "birthplace": "مكان التولد",
+    "needsurgery": "بحاجة عملية",
+    "SrugeryType": "نوع العملية",
+    "IsSponsored": "هل هناك داعم",
+    "sponsor": "اسم الداعم",
+    "search": "بحث",
+    "ChildrenTable": "جدول الاطفال",
+    "DateRangeofsponsor": "الدعم من تاريخ الى تاريخ",
+    "EnterSrugeryType": "ادخل نوع العملية",
+    "add": "اضافة",
+    "Enterbirthplace": "ادخل تاريخ الميلاد",
+    "Enterphone": "ادخل رقم الهاتف",
+    "Entermobilephone": "ادخل رقم الموبايل",
+    "Enterfather": "ادخل اسم الاب",
+    "entermothername": "ادخل اسم الام",
+    "enterlastname": "ادخل الكنية",
+    "enterfirstname": "ادخل الاسم",
+    "event": "حدث",
+    "name": "الاسم",
+    "ContactInfo": "معلومات الاتصال",
+    "BirthInfo": "معلومات الميلاد",
+    "SponsoredInfo": "معلومات الداعم",
+    "SurgeryInfo": "معلومات الجراحة",
+    "Errorinput": "خطأ في المدخلات",
+    "pleaseenter": "ادخل حقل ",
+    "ok": "حسناً",
+    "NoNeedSurgery": "ليس بحاجة",
+    "IsNotSponsored": "لا يوجد داعم",
+    "remove": "حذف",
+    "edit": "تعديل",
+    "ErrorOnDataIsAfterNowBirthday": "ارجو ادخال تاريخ الميلاد قبل تاريخ اليوم",
+    "TagsNotFound": "خطأ في نظام الوصف غير موجود",
+    "Su": "احد",
+    "Mo": "اثن",
+    "Tu": "ثلاث",
+    "We": "ارب",
+    "Th": "خمي",
+    "Fr": "جمع",
+    "Sa": "سب",
+    "January": "كانون الثاني",
+    "February": "شباط",
+    "March": "آذار",
     "April": "نيسان",
-    "May":"أيار",
-    "June":"حزيران",
-    "July":"تموز",
-    "August":"آب",
-    "September":"أيلول",
-    "October":"تشرين الأول",
-    "November":"تشرين الثاني",
-    "December":"كانون الأول",
+    "May": "أيار",
+    "June": "حزيران",
+    "July": "تموز",
+    "August": "آب",
+    "September": "أيلول",
+    "October": "تشرين الأول",
+    "November": "تشرين الثاني",
+    "December": "كانون الأول",
     "firstDay": 1,
     "cancel": "الغاء",
     "from": "من",
     "to": "الى"
- 
-
 }
