--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -9,6 +9,9 @@
     "password": "Password",
     "homepage": "Home Page",
     "admin_nav": "Admin Bar",
+    "error_password_or_username":"Password or username is incorrect",
+    "error":"Error",
+    "TRY_AGEIN":"Try agein",
     "GithubAnyErrorOrSendHere": "Github repo",
     "Documentation": "Ask here for bugs",
     "status": "Status",
