updating en.json

--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -114,7 +114,7 @@
     "date":"Date",
     "enterdoctorname":"Enter doctor name",
     "dateofexam":"Date of referrals",
-    "clinicalexam":"Medical referrals",
+    "clinicalexam":"Clinical referrals",
     "Entercase":"Enter case",
     "ShowMesBoxConfingRemove": "Are you suer? ",
     "table":"Table"
