--- a/resources/js/lang/en.json
+++ b/resources/js/lang/en.json
@@ -9,9 +9,9 @@
     "password": "Password",
     "homepage": "Home Page",
     "admin_nav": "Admin Bar",
-    "error_password_or_username":"Password or username is incorrect",
-    "error":"Error",
-    "try_agein":"Try agein",
+    "error_password_or_username": "Password or username is incorrect",
+    "error": "Error",
+    "try_agein": "Try agein",
     "GithubAnyErrorOrSendHere": "Github repo",
     "Documentation": "Ask here for bugs",
     "status": "Status",
@@ -22,7 +22,7 @@
     "users": "Users",
     "see_more": "See more",
     "AddChild": "Add Child",
-    "child":"Child",
+    "child": "Child",
     "firstname": "First name",
     "lastname": "Last name",
     "mothername": "Mother name",
@@ -85,10 +85,9 @@
     "cancel": "Cancel",
     "from": "From",
     "to": "To",
-    "childrenInfo":"Children Info",
-    "sponsorInfo":"Sponsor Type",
+    "childrenInfo": "Children Info",
+    "sponsorInfo": "Sponsor Type",
     "SponsorsTable": "Sponsors Table",
-
     "Sponsors": "Sponsors",
     "idnumber": "National id number",
     "enteridnumber": "Enter National id number",
@@ -97,25 +96,48 @@
     "Enter": "Enter",
     "logout": "Logout",
     "surgery": "Surgery",
-
     "money": "Money",
     "medical": "Medical",
     "educational": "Educational",
-    "IshaveNotChildren" : "Not have Children ",
-    "Sponsor":"Sponsor",
-    "ErrorOnDateMostDataStartFirstEnd":"The start date is equal to or greater than the end date",
-    "AddingComplete":"Added successfully",
-    "updateComplete":"Updated successfully",
-    "IcantAddTags":"I can't Add Tags",
+    "IshaveNotChildren": "Not have Children ",
+    "Sponsor": "Sponsor",
+    "ErrorOnDateMostDataStartFirstEnd": "The start date is equal to or greater than the end date",
+    "AddingComplete": "Added successfully",
+    "updateComplete": "Updated successfully",
+    "IcantAddTags": "I can't Add Tags",
     "tagsifmedicastring": "Name Of type sponsor",
-    "icantaddclinicalexam":"I Cant Add Clinical Exam",
-    "doctorname":"Doctor name",
-    "case":"Case",
-    "date":"Date",
-    "enterdoctorname":"Enter doctor name",
-    "dateofexam":"Date of referrals",
-    "clinicalexam":"Clinical referrals",
-    "Entercase":"Enter case",
+    "icantaddclinicalexam": "I Cant Add Clinical Exam",
+    "doctorname": "Doctor name",
+    "case": "Case",
+    "date": "Date",
+    "enterdoctorname": "Enter doctor name",
+    "dateofexam": "Date of referrals",
+    "clinicalexam": "Clinical referrals",
+    "Entercase": "Enter case",
     "ShowMesBoxConfingRemove": "Are you suer? ",
-    "table":"Table"
+    "table": "Table",
+    "husband": "husband",
+    "wife": "wife",
+    "enterhusband": "Enter husband",
+    "enterwife": "Enter wife",
+    "family_card_id": "family card id",
+    "enterfamily_card_id": "Enter family card id",
+    "have_previous_resident_address": "have previous resident address",
+    "previous_resident_address":"previous resident address",
+    "enterprevious_resident_address":"enter previous resident address",
+    "current_resident_address": "current resident address",
+    "entercurrent_resident_address": "enter current resident address",
+    "economic_status": "Economic status",
+    "entercount": "Enter Count of Chlidren  ",
+    "count": "Count of Chlidren",
+    "family": "Family",
+    "Count": "Count of Chlidren",
+    "Docs": "Docs",
+    "AddressInfo": "Address Info",
+    "IcantAddfamilies": "I cant Added families",
+    "families": "Families",
+    "middle":"middle",
+    "good":"good",
+    "bad":"bad"
+
 }
