--- a/resources/js/lang/ar.json
+++ b/resources/js/lang/ar.json
@@ -153,8 +153,9 @@
     "enter":"ادخل",
     "inventorycount":"جرد",
     "countonwarehouse":"العدد في المخزن",
-    "warehouses":"مخازن"
-
+    "warehouses":"مخازن",
+    "ware":"عنصر",
+    "settings":"اعدادت"
 
 
 }
