--- a/resources/js/lang/ar.json
+++ b/resources/js/lang/ar.json
@@ -155,7 +155,7 @@
     "countonwarehouse":"العدد في المخزن",
     "warehouses":"مخازن",
     "ware":"عنصر",
-    "settings":"اعدادت"
-
+    "settings":"اعدادت",
+    "hasfromsponsors":"الاطفال المدعومين"
 
 }
